# Gamificacion

./: CMakeLists.txt  README.md  batalla.cpp  batalla.h  batalla.ui  chooseapectdialog.cpp  chooseapectdialog.h  chooseapectdialog.ui  chooseaspectdialog.cpp  chooseaspectdialog.h  colapreguntas.cpp  colapreguntas.h  escenaarte.cpp  escenaarte.h  escenaarte.ui  escenaciencia.cpp  escenaciencia.h  escenaciencia.ui  escenahistoria.cpp  escenahistoria.h  escenahistoria.ui  escenainterior.cpp  escenainterior.h  escenainterior.ui  escenapolitica.cpp  escenapolitica.h  escenapolitica.ui  gamestate.cpp  gamestate.h  isSprite.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapa.cpp  mapa.h  mapa.ui  pictures.qrc  pregunta.cpp  pregunta.h  prueba.cpp  (+12 more)
